# AthenaMyst.DIVINA

./: .gitignore  .mocharc.json  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DIAGNOSIS.md  DIVINE_TRADING.md  MIGRATION_NOTES.md  Makefile  README.md  THE_LAST_WHISPER.md  UPDATE_SUMMARY.md  amplify.yml  cursor.config.js  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  test-divina.ts  test-runner.js  test-runner.ts  test-trading.ts  test_oanda_historical.py  test_oanda_multi_pair.py  test_oanda_multi_signals.py  test_oanda_signal_analysis.py  test_oanda_signal_analysis_enhanced.py  test_oanda_single_pair.py  tsconfig.json  tsconfig.test.json  vite.config.js
"b/: LICENSE.v\342\210\236"
.github/workflows/: ci-cd.yml  ci.yml  gh-pages.yml  pages.yml  pre-commit.yml  umbrella-ci.yml
.well-known/: mcp.json
api/: index.js
deploy/: README.md  oanda-deployment.js  render.yaml
divina/: pipeline.json  pyproject.toml
divina/divina/: __init__.py  config.py  logging.py
divina/divina/alerting/: __init__.py
divina/divina/app/: __init__.py  main.py  metrics.py
divina/divina/backtest/: __init__.py  __main__.py  cli.py
divina/divina/connectors/: __init__.py
divina/divina/data/: __init__.py  manager.py
divina/divina/indicators/: __init__.py
divina/divina/logging/: __init__.py
divina/divina/models/: __init__.py
divina/divina/monitoring/: __init__.py  otel.py
divina/divina/state/: __init__.py
divina/divina/strategy/: __init__.py  risk.py  signals.py  trading_strategy.py
divina/divina/utils/: cache.py  fp.py  retry.py  time_utils.py
docs/: COVENANT.md  QUICKSTART.md  index.md
gamedin/: hub.json
public/: App.jsx  index.html  vite.config.js
src/: App.css
src/config/: oanda.ts
src/modules/: divina.ts  prophecy.ts
src/modules/trading/: DivineTrader.new.ts  commandHandler.ts  divineTrader.ts  indicators.ts  monitoring.ts  reporting.ts  riskManager.ts
src/services/: oandaService.ts
src/strategies/: divineTradingStrategy.ts
test/trading/: divineTrader.edge-cases.test.ts  divineTrader.test.ts
tests/: api.test.js  generate_test_data.py  test_data_manager.py  test_indicators.py  test_trading_rules.py
trading_bot/: .gitignore  OANDA_README.md  README.md  __init__.py  analyze_logs.py  bot_monitor.py  ccxt_engine.py  check_balance_simple.py  check_balances.py  check_bot_status.py  check_kraken_status.py  check_status.py  debug_bot.py  discord_bot.py  discord_webhook.py  divina_diagnostics.py  divina_scalper.py  enhanced_scalper.py  exit_monitor.py  forex_pairs.py  generate_pair_configs.py  ichimoku_strategy.py  kraken_live_test.py  kraken_scalper_fixed.py  kraken_trader.py  monitor.py  monitor_bot.py  oanda_engine.py  oanda_multi_scalper.py  oanda_scalper.py  optimize_risk.py  optimized_kraken_bot.py  render.yaml  requirements.txt  requirements_oanda.txt  run_binance_ichimoku.py  run_bot.py  run_crypto.py  run_kraken_ichimoku.py  serafina_integration.py  (+26 more)
