[tool.poetry]
name = "divina"
version = "0.1.0"
description = "AthenaMyst:Divina - Multi-timeframe FX Signal Engine"
authors = ["AthenaMyst Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "divina"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
pandas-ta = "^0.3.14"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
requests = "^2.28.2"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.1"
prometheus-client = "^0.16.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
ruff = "^0.0.261"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[testenv]
deps =
    pytest
    pytest-cov
    pytest-asyncio
    pytest-mock
commands =
    pytest --cov=divina --cov-report=term-missing tests/
    mypy divina/
    black --check divina/ tests/
    ruff check divina/ tests/
